--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "^3.0.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
+    "@ionic/storage-angular": "^3.0.6",
     "npx": "^10.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
